--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="/eslint-config/_nuxt/entry.CM8olAfq.css">
-<link rel="modulepreload" as="script" crossorigin href="/eslint-config/_nuxt/Dwuha7_F.js">
-<link rel="prefetch" as="style" href="/eslint-config/_nuxt/error-404.CrLI2fNT.css">
-<link rel="prefetch" as="script" crossorigin href="/eslint-config/_nuxt/DpEr5rTL.js">
+<link rel="stylesheet" href="/eslint-config/_nuxt/entry.CH3YqO9Z.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/eslint-config/_nuxt/DcxSLaLk.js">
+<link rel="prefetch" as="style" crossorigin href="/eslint-config/_nuxt/error-404.DQyDOsVu.css">
+<link rel="prefetch" as="script" crossorigin href="/eslint-config/_nuxt/cAXWN3As.js">
 <link rel="prefetch" as="script" crossorigin href="/eslint-config/_nuxt/DlAUqK2U.js">
-<link rel="prefetch" as="style" href="/eslint-config/_nuxt/error-500.BNkORVLc.css">
-<link rel="prefetch" as="script" crossorigin href="/eslint-config/_nuxt/CdI1Z4gW.js">
+<link rel="prefetch" as="style" crossorigin href="/eslint-config/_nuxt/error-500.B0NI7E-T.css">
+<link rel="prefetch" as="script" crossorigin href="/eslint-config/_nuxt/CfErdRmq.js">
 <link rel="icon" type="image/svg+xml" href="/eslint-config/favicon.svg">
-<script type="module" src="/eslint-config/_nuxt/Dwuha7_F.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1730330244563,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/eslint-config/",buildId:"a452c48a-ab03-4350-8619-ad0c928ce619",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/eslint-config/_nuxt/DcxSLaLk.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733807451752,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/eslint-config/",buildId:"17c64db8-e843-4164-8a25-877c5500f41b",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
